[gd_scene load_steps=5 format=3 uid="uid://jvxqkd10i7hg"]

[ext_resource type="Script" path="res://Scripts/food.gd" id="1_jrh10"]
[ext_resource type="Texture2D" uid="uid://edcvp6qcnr5v" path="res://Sprites/Burger.png" id="2_ltnim"]
[ext_resource type="AudioStream" uid="uid://dkiugd1r8d4v8" path="res://Audio/slime eating.mp3" id="3_q8a8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_viqtw"]
size = Vector2(26, 26)

[node name="Food" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_jrh10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_viqtw")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -33.0
offset_top = -16.0
offset_right = 32.0
offset_bottom = -12.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.0136, 0.0136)
texture = ExtResource("2_ltnim")

[node name="EatAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q8a8o")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
